[egg_info]
tag_build =

[metadata]
description-file = readme.rst

[bdist_wheel]
universal=1

# Babel configuration
[extract_messages]
input_dirs = keg_elements
mapping_file = keg_elements/i18n/babel.cfg
output_file = keg_elements/i18n/keg_elements.pot

[init_catalog]
domain = keg_elements
input_file = keg_elements/i18n/keg_elements.pot
output_dir = keg_elements/i18n

[update_catalog]
domain = keg_elements
input_file = keg_elements/i18n/keg_elements.pot
output_dir = keg_elements/i18n

[compile_catalog]
domain = keg_elements
directory = keg_elements/i18n

[compile_json]
domain = keg_elements
directory = keg_elements/i18n
output_dir = keg_elements/static/i18n
